<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UserDetail"
    android:background="@color/purple">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_detail"
        android:layout_width="409dp"
        android:layout_height="238dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:src="@android:color/holo_blue_light" />

    <LinearLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar_detail">

        <TextView
            android:id="@+id/tv_username_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tv_company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="#FFFFFF"/>


        <ImageView
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location_blue"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tv_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="#FFFFFF"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_box_background"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_container">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:outlineAmbientShadowColor="@color/blue"
            android:outlineSpotShadowColor="@color/blue"
            tools:src="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_following_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_val" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_follower_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_val" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_box_background"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repository_label" />

        <TextView
            android:id="@+id/tv_repo_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/count_val" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>